--- a/src/style.css
+++ b/src/style.css
@@ -592,10 +592,6 @@ video {
   }
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
@@ -604,12 +600,24 @@ video {
   position: relative;
 }
 
+.sticky {
+  position: sticky;
+}
+
 .-bottom-2 {
   bottom: -0.5rem;
 }
 
 .left-1\/2 {
   left: 50%;
+}
+
+.left-\[425px\] {
+  left: 425px;
+}
+
+.left-\[665px\] {
+  left: 665px;
 }
 
 .right-10 {
@@ -622,6 +630,10 @@ video {
 
 .top-1\/2 {
   top: 50%;
+}
+
+.top-\[135px\] {
+  top: 135px;
 }
 
 .z-50 {
@@ -709,6 +721,10 @@ video {
   height: 300px;
 }
 
+.h-\[500px\] {
+  height: 500px;
+}
+
 .w-20 {
   width: 5rem;
 }
@@ -781,6 +797,10 @@ video {
 
 .overflow-hidden {
   overflow: hidden;
+}
+
+.scroll-smooth {
+  scroll-behavior: smooth;
 }
 
 .rounded-full {
@@ -921,6 +941,10 @@ video {
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
 }
 
+.bg-\[url\(\'\/img\/background\.jpeg\'\)\] {
+  background-image: url('/img/background.jpeg');
+}
+
 .fill-current {
   fill: currentColor;
 }
@@ -1026,6 +1050,11 @@ video {
   line-height: 2.5rem;
 }
 
+.text-7xl {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
 .text-base {
   font-size: 1rem;
   line-height: 1.5rem;
@@ -1127,6 +1156,25 @@ video {
 .nav-a:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(4 170 109 / var(--tw-bg-opacity));
+}
+
+.header-button {
+  border-radius: 0.75rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(4 170 109 / var(--tw-bg-opacity));
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.header-button:hover {
+  opacity: 0.8;
 }
 
 .hover\:border-primary:hover {
